--- a/index.html
+++ b/index.html
@@ -10,4 +10,6 @@ title: {{ site.name }}
       <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
     {% endfor %}
   </ul>
+  adcadc
+  adv
 </div>
